# home-watcher

./: Cargo.toml  README.md  home-watcher.service
src/: ausearch_parse.rs  database.rs  file_audit.rs  main.rs  standard_dirs.rs  time.rs  user_env.rs  util.rs
